# histogram

./: .crucible.toml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/skills/pr/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml  tag-release.yml
benches/: histogram.rs
scripts/: autodoc.enc  doc.cfg  travis-doc-upload.sh  travis.enc
src/: atomic.rs  bucket.rs  config.rs  errors.rs  lib.rs  sparse.rs  standard.rs
